--- a/src/components/Customers/Customer.css
+++ b/src/components/Customers/Customer.css
@@ -1,2 +1,23 @@
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
+
+
+/* testimonialSlider.css */
+.swiper-slide {
+    transition: all 300ms ease;
+    z-index: 10;
+    opacity: 0.6;
+    transform: scale(0.9);
+  }
+  .swiper-slide-active {
+    z-index: 20 !important;
+    opacity: 1 !important;
+    transform: scale(1) !important;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+  }
+  .swiper-slide-prev,
+  .swiper-slide-next {
+    opacity: 0.8;
+    transform: scale(0.95);
+  }
+  
